kubernetes/clusters/home/arr-stack/seerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr-ingress
  namespace: arr-stack

  annotations:
    external-dns.alpha.kubernetes.io/hostname: overseerr.alarlab.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "alarlab.dev"

    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"

    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - overseerr.alarlab.dev
      secretName: seerr-tls

  rules:
    - host: overseerr.alarlab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  number: 5055

    - host: overseerr.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  number: 5055
